--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 loom {
 	accessWidenerPath = file("src/main/resources/modmenu.accesswidener")
 	mergedMinecraftJar()
-	setFML(new File("F:\\Projects\\IDEA\\Minecraft\\MITE\\FML3\\FishModLoader-v3.3.2.jar"))
+	setFML(new File("libs\\FishModLoader-v3.3.2.jar"))
 	mods {
 		"Bread Skin" {
 			sourceSet sourceSets.main
